se agrega dashboard y estilos

--- a/home.html
+++ b/home.html
@@ -4,9 +4,119 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dash</title>
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/estiloshome.css" />
 </head>
 <body>
-    <h1>Bienvenido al Sistema de Inventarios de ATENTO</h1>
+    <div class="barralateral">
+        <div class="barralateral-brand">
+            <div class="brand-flex">
+                <img src="img/logo.jpg" width="30px" alt="">
+
+                <div class="brand-icons">
+                    <span class="las-la-bell"></span>
+                    <span class="las-la-user-circle"></span>
+                </div>
+            </div>
+        </div>
+        <div class="barralateral-main">
+            <div class="barralateral-user">
+                <img src="assets/images/perfil.PNG" width="80px" alt="">
+                <div>
+                    <h3>Carlos Posada</h3>
+                    <span>carlosposada@gmail.com</span>
+                </div>    
+            </div>
+            <div class="barralateral-menu">
+                <div class="menu-block">
+                    <div class="menu-head">
+                        <span>Dashboard</span>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <span class="las la-balance-scale"></span>
+                                Record
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="las la-chart-pie"></span>
+                                Search
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="menu-head">
+                        <span>Applications</span>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <span class="las la-calendar"></span>
+                                Information
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="las la-users"></span>
+                                Contacts
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="las la-shopping-cart"></span>
+                                Ecommerce
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="las la-envelope"></span>
+                                Mailbox
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="las la-check-circle"></span>
+                                Task
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="main-content">
+        <header>
+            <span class="bars"></span>
+
+            <div>
+                <span class="las la-search"></span>
+                <span class="las la-bookmark"></span>
+                <span class="las la-sms"></span>
+            </div>
+        </header>
+        <main>
+            <div class="page-header">
+                <div>
+                    <h1>Analitics Dashboard</h1>
+                    <small>Monitor key metrics. 
+                        Reportes</small>
+                </div>
+
+                <div>
+                    <button>
+                        <span class="las la-file-export"></span>
+                        Export
+                    </button>
+                    <button>
+                        <span class="las la-tools"></span>
+                        Settings
+                    </button>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
