--- a/home.html
+++ b/home.html
@@ -89,9 +89,13 @@
     </div>
     <div class="main-content">
         <header>
-            <span class="bars"></span>
+            <div class="menu-toogle">
+                <label for="">
+                    <span class="las la-bars"></span>
+                </label>
+            </div>
 
-            <div>
+            <div class="header-icons">
                 <span class="las la-search"></span>
                 <span class="las la-bookmark"></span>
                 <span class="las la-sms"></span>
